--- a/package.json
+++ b/package.json
@@ -1,1 +1,22 @@
-
+{
+    "name": "employee-tracker",
+    "version": "1.0.0",
+    "description": "This application helps companies view and manage their departments, roles, and employees.",
+    "main": "index.js",
+    "repository": {
+      "type": "git",
+      "url": "git+https://github.com/danwillett/Employee-Tracker.git"
+    },
+    "author": "danwillett",
+    "license": "MIT",
+    "bugs": {
+      "url": "https://github.com/danwillett/Employee-Tracker/issues"
+    },
+    "homepage": "https://github.com/danwillett/Employee-Tracker#readme",
+    "dependencies": {
+      "console.table": "^0.10.0",
+      "dotenv": "^16.0.3",
+      "inquirer": "^8.2.4",
+      "mysql2": "^3.0.1"
+    }
+  }
